src/parser/parser.output
Terminals unused in grammar

    '~'


Grammar

    0 $accept: module $end

    1 module: module_list

    2 module_item: import_definition
    3            | class_definition

    4 module_list: module_item
    5            | module module_item

    6 complex_name: SYMBOL
    7             | complex_name '.' SYMBOL

    8 intrinsic_type: DICT
    9               | LIST
   10               | BOOL
   11               | STRING
   12               | NUM
   13               | complex_name

   14 formatted_string_param: QSTRG
   15                       | expression

   16 formatted_string_param_list: formatted_string_param
   17                            | formatted_string_param_list ',' formatted_string_param

   18 formatted_string: QSTRG

   19 $@1: %empty

   20 $@2: %empty

   21 $@3: %empty

   22 formatted_string: QSTRG $@1 ':' '(' $@2 formatted_string_param_list $@3 ')'

   23 bool_value: TRUE
   24           | FALSE

   25 $@4: %empty

   26 import_definition: IMPORT SYMBOL $@4 ';'

   27 class_body_item: class_data_definition
   28                | method_definition
   29                | constructor_definition
   30                | destructor_definition

   31 class_body: class_body_item
   32           | class_body class_body_item

   33 $@5: %empty

   34 $@6: %empty

   35 $@7: %empty

   36 $@8: %empty

   37 class_definition: CLASS $@5 SYMBOL $@6 '(' ')' '{' $@7 class_body $@8 '}'

   38 $@9: %empty

   39 $@10: %empty

   40 class_data_definition: intrinsic_type $@9 SYMBOL $@10 ';'

   41 function_data_definition_target: NOTHING
   42                                | expression

   43 $@11: %empty

   44 function_data_definition_target: type_cast $@11 expression
   45                                | formatted_string

   46 function_data_definition_symbol: SYMBOL

   47 function_data_definition: intrinsic_type function_data_definition_symbol ';'

   48 $@12: %empty

   49 function_data_definition: intrinsic_type function_data_definition_symbol '=' $@12 function_data_definition_target ';'

   50 $@13: %empty

   51 method_def_param: intrinsic_type $@13 SYMBOL

   52 method_def_param_list: method_def_param
   53                      | method_def_param_list ',' method_def_param

   54 method_param_def: method_def_param_list
   55                 | %empty

   56 $@14: %empty

   57 $@15: %empty

   58 $@16: %empty

   59 $@17: %empty

   60 $@18: %empty

   61 $@19: %empty

   62 $@20: %empty

   63 method_definition: METHOD $@14 SYMBOL $@15 '(' $@16 method_param_def $@17 ')' '(' $@18 method_param_def $@19 ')' $@20 method_body

   64 method_body_element: function_data_definition
   65                    | function_call
   66                    | for_clause
   67                    | if_clause
   68                    | while_clause
   69                    | do_clause
   70                    | switch_clause
   71                    | assignment ';'

   72 method_body_element_list: method_body_element
   73                         | method_body_element_list method_body_element

   74 $@21: %empty

   75 $@22: %empty

   76 method_body: '{' $@21 method_body_element_list $@22 '}'
   77            | '{' '}'

   78 $@23: %empty

   79 $@24: %empty

   80 $@25: %empty

   81 $@26: %empty

   82 constructor_definition: CREATE $@23 '(' $@24 method_param_def $@25 ')' $@26 method_body

   83 $@27: %empty

   84 destructor_definition: DESTROY $@27 method_body

   85 $@28: %empty

   86 $@29: %empty

   87 subscript_item: '[' $@28 expression $@29 ']'

   88 $@30: %empty

   89 $@31: %empty

   90 subscript_item: '[' $@30 formatted_string $@31 ']'

   91 subscript_list: subscript_item
   92               | subscript_list subscript_item

   93 expression_name: complex_name

   94 $@32: %empty

   95 expression_name: complex_name $@32 subscript_list

   96 expression: NUMBER
   97           | expression_name
   98           | expression '+' expression
   99           | expression '-' expression
  100           | expression '/' expression
  101           | expression '*' expression
  102           | expression '%' expression
  103           | expression AND expression
  104           | expression OR expression
  105           | expression LESS expression
  106           | expression MORE expression
  107           | expression EQU expression
  108           | expression NEQU expression
  109           | expression LTEQU expression
  110           | expression GTEQU expression
  111           | '-' expression
  112           | NOT expression
  113           | '(' expression ')'

  114 function_call_parameter: formatted_string
  115                        | expression

  116 function_call_parameter_list: %empty
  117                             | function_call_parameter
  118                             | function_call_parameter_list ',' function_call_parameter

  119 $@33: %empty

  120 $@34: %empty

  121 $@35: %empty

  122 $@36: %empty

  123 $@37: %empty

  124 function_call: complex_name $@33 '(' $@34 function_call_parameter_list $@35 ')' '(' $@36 function_call_parameter_list $@37 ')' ';'

  125 $@38: %empty

  126 function_call: DESTROY complex_name $@38 ';'

  127 branch_expression: expression
  128                  | bool_value

  129 jump_clause: CONTINUE ';'
  130            | BREAK ';'

  131 loop_body_element: method_body_element
  132                  | jump_clause

  133 loop_body_element_list: loop_body_element
  134                       | loop_body_element_list loop_body_element

  135 loop_body: '{' '}'

  136 $@39: %empty

  137 $@40: %empty

  138 loop_body: '{' $@39 loop_body_element_list $@40 '}'

  139 for_initialize_assign: NOTHING
  140                      | expression
  141                      | bool_value

  142 $@41: %empty

  143 $@42: %empty

  144 for_initialize: intrinsic_type $@41 SYMBOL $@42 '=' for_initialize_assign ';'

  145 $@43: %empty

  146 for_initialize: assignment $@43 ';'

  147 $@44: %empty

  148 for_test_expression: expression $@44 ';'

  149 for_arith_expression: expression
  150                     | assignment

  151 $@45: %empty

  152 $@46: %empty

  153 for_clause: FOR '(' $@45 for_initialize for_test_expression for_arith_expression $@46 ')' loop_body

  154 $@47: %empty

  155 $@48: %empty

  156 else_clause: ELSE '(' $@47 expression $@48 ')' method_body

  157 $@49: %empty

  158 else_clause: ELSE $@49 method_body

  159 else_body: else_clause
  160          | else_body else_clause
  161          | method_body

  162 $@50: %empty

  163 $@51: %empty

  164 if_clause: IF '(' $@50 branch_expression $@51 ')' else_body

  165 $@52: %empty

  166 $@53: %empty

  167 while_clause: WHILE '(' $@52 branch_expression $@53 ')' loop_body

  168 $@54: %empty

  169 $@55: %empty

  170 $@56: %empty

  171 $@57: %empty

  172 do_clause: DO $@54 loop_body $@55 WHILE '(' $@56 branch_expression $@57 ')' ';'

  173 $@58: %empty

  174 case_clause: CASE NUMBER $@58 loop_body

  175 $@59: %empty

  176 default_case: DEFAULT $@59 loop_body

  177 case_body: case_clause
  178          | case_body case_clause

  179 $@60: %empty

  180 $@61: %empty

  181 $@62: %empty

  182 switch_clause_intro: SWITCH '(' $@60 expression $@61 ')' '{' $@62 case_body

  183 switch_clause: switch_clause_intro '}'

  184 $@63: %empty

  185 switch_clause: switch_clause_intro default_case $@63 '}'

  186 $@64: %empty

  187 type_cast: intrinsic_type $@64 ':'

  188 assignment_target: expression
  189                  | formatted_string
  190                  | type_cast expression
  191                  | NOTHING
  192                  | bool_value

  193 $@65: %empty

  194 assignment: complex_name $@65 '=' assignment_target


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 102
    '(' (40) 22 37 63 82 113 124 153 156 164 167 172 182
    ')' (41) 22 37 63 82 113 124 153 156 164 167 172 182
    '*' (42) 101
    '+' (43) 98
    ',' (44) 17 53 118
    '-' (45) 99 111
    '.' (46) 7
    '/' (47) 100
    ':' (58) 22 187
    ';' (59) 26 40 47 49 71 124 126 129 130 144 146 148 172
    '=' (61) 49 144 194
    '[' (91) 87 90
    ']' (93) 87 90
    '{' (123) 37 76 77 135 138 182
    '}' (125) 37 76 77 135 138 183 185
    '~' (126)
    error (256)
    NOTHING (258) 41 139 191
    IMPORT (259) 26
    CLASS (260) 37
    METHOD (261) 63
    CREATE (262) 82
    DESTROY (263) 84 126
    DICT (264) 8
    LIST (265) 9
    BOOL (266) 10
    TRUE (267) 23
    FALSE (268) 24
    STRING (269) 11
    NUM (270) 12
    FOR (271) 153
    IF (272) 164
    ELSE (273) 156 158
    WHILE (274) 167 172
    DO (275) 172
    SWITCH (276) 182
    CASE (277) 174
    BREAK (278) 130
    CONTINUE (279) 129
    DEFAULT (280) 176
    SYMBOL (281) 6 7 26 37 40 46 51 63 144
    NUMBER (282) 96 174
    QSTRG (283) 14 18 22
    AND (284) 103
    OR (285) 104
    NOT (286) 112
    EQU (287) 107
    NEQU (288) 108
    LTEQU (289) 109
    GTEQU (290) 110
    LESS (291) 105
    MORE (292) 106
    NEG (293)


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    module (57)
        on left: 1
        on right: 0 5
    module_item (58)
        on left: 2 3
        on right: 4 5
    module_list (59)
        on left: 4 5
        on right: 1
    complex_name (60)
        on left: 6 7
        on right: 7 13 93 95 124 126 194
    intrinsic_type (61)
        on left: 8 9 10 11 12 13
        on right: 40 47 49 51 144 187
    formatted_string_param (62)
        on left: 14 15
        on right: 16 17
    formatted_string_param_list (63)
        on left: 16 17
        on right: 17 22
    formatted_string (64)
        on left: 18 22
        on right: 45 90 114 189
    $@1 (65)
        on left: 19
        on right: 22
    $@2 (66)
        on left: 20
        on right: 22
    $@3 (67)
        on left: 21
        on right: 22
    bool_value (68)
        on left: 23 24
        on right: 128 141 192
    import_definition (69)
        on left: 26
        on right: 2
    $@4 (70)
        on left: 25
        on right: 26
    class_body_item (71)
        on left: 27 28 29 30
        on right: 31 32
    class_body (72)
        on left: 31 32
        on right: 32 37
    class_definition (73)
        on left: 37
        on right: 3
    $@5 (74)
        on left: 33
        on right: 37
    $@6 (75)
        on left: 34
        on right: 37
    $@7 (76)
        on left: 35
        on right: 37
    $@8 (77)
        on left: 36
        on right: 37
    class_data_definition (78)
        on left: 40
        on right: 27
    $@9 (79)
        on left: 38
        on right: 40
    $@10 (80)
        on left: 39
        on right: 40
    function_data_definition_target (81)
        on left: 41 42 44 45
        on right: 49
    $@11 (82)
        on left: 43
        on right: 44
    function_data_definition_symbol (83)
        on left: 46
        on right: 47 49
    function_data_definition (84)
        on left: 47 49
        on right: 64
    $@12 (85)
        on left: 48
        on right: 49
    method_def_param (86)
        on left: 51
        on right: 52 53
    $@13 (87)
        on left: 50
        on right: 51
    method_def_param_list (88)
        on left: 52 53
        on right: 53 54
    method_param_def (89)
        on left: 54 55
        on right: 63 82
    method_definition (90)
        on left: 63
        on right: 28
    $@14 (91)
        on left: 56
        on right: 63
    $@15 (92)
        on left: 57
        on right: 63
    $@16 (93)
        on left: 58
        on right: 63
    $@17 (94)
        on left: 59
        on right: 63
    $@18 (95)
        on left: 60
        on right: 63
    $@19 (96)
        on left: 61
        on right: 63
    $@20 (97)
        on left: 62
        on right: 63
    method_body_element (98)
        on left: 64 65 66 67 68 69 70 71
        on right: 72 73 131
    method_body_element_list (99)
        on left: 72 73
        on right: 73 76
    method_body (100)
        on left: 76 77
        on right: 63 82 84 156 158 161
    $@21 (101)
        on left: 74
        on right: 76
    $@22 (102)
        on left: 75
        on right: 76
    constructor_definition (103)
        on left: 82
        on right: 29
    $@23 (104)
        on left: 78
        on right: 82
    $@24 (105)
        on left: 79
        on right: 82
    $@25 (106)
        on left: 80
        on right: 82
    $@26 (107)
        on left: 81
        on right: 82
    destructor_definition (108)
        on left: 84
        on right: 30
    $@27 (109)
        on left: 83
        on right: 84
    subscript_item (110)
        on left: 87 90
        on right: 91 92
    $@28 (111)
        on left: 85
        on right: 87
    $@29 (112)
        on left: 86
        on right: 87
    $@30 (113)
        on left: 88
        on right: 90
    $@31 (114)
        on left: 89
        on right: 90
    subscript_list (115)
        on left: 91 92
        on right: 92 95
    expression_name (116)
        on left: 93 95
        on right: 97
    $@32 (117)
        on left: 94
        on right: 95
    expression (118)
        on left: 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113
        on right: 15 42 44 87 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 115 127 140 148 149 156 182 188 190
    function_call_parameter (119)
        on left: 114 115
        on right: 117 118
    function_call_parameter_list (120)
        on left: 116 117 118
        on right: 118 124
    function_call (121)
        on left: 124 126
        on right: 65
    $@33 (122)
        on left: 119
        on right: 124
    $@34 (123)
        on left: 120
        on right: 124
    $@35 (124)
        on left: 121
        on right: 124
    $@36 (125)
        on left: 122
        on right: 124
    $@37 (126)
        on left: 123
        on right: 124
    $@38 (127)
        on left: 125
        on right: 126
    branch_expression (128)
        on left: 127 128
        on right: 164 167 172
    jump_clause (129)
        on left: 129 130
        on right: 132
    loop_body_element (130)
        on left: 131 132
        on right: 133 134
    loop_body_element_list (131)
        on left: 133 134
        on right: 134 138
    loop_body (132)
        on left: 135 138
        on right: 153 167 172 174 176
    $@39 (133)
        on left: 136
        on right: 138
    $@40 (134)
        on left: 137
        on right: 138
    for_initialize_assign (135)
        on left: 139 140 141
        on right: 144
    for_initialize (136)
        on left: 144 146
        on right: 153
    $@41 (137)
        on left: 142
        on right: 144
    $@42 (138)
        on left: 143
        on right: 144
    $@43 (139)
        on left: 145
        on right: 146
    for_test_expression (140)
        on left: 148
        on right: 153
    $@44 (141)
        on left: 147
        on right: 148
    for_arith_expression (142)
        on left: 149 150
        on right: 153
    for_clause (143)
        on left: 153
        on right: 66
    $@45 (144)
        on left: 151
        on right: 153
    $@46 (145)
        on left: 152
        on right: 153
    else_clause (146)
        on left: 156 158
        on right: 159 160
    $@47 (147)
        on left: 154
        on right: 156
    $@48 (148)
        on left: 155
        on right: 156
    $@49 (149)
        on left: 157
        on right: 158
    else_body (150)
        on left: 159 160 161
        on right: 160 164
    if_clause (151)
        on left: 164
        on right: 67
    $@50 (152)
        on left: 162
        on right: 164
    $@51 (153)
        on left: 163
        on right: 164
    while_clause (154)
        on left: 167
        on right: 68
    $@52 (155)
        on left: 165
        on right: 167
    $@53 (156)
        on left: 166
        on right: 167
    do_clause (157)
        on left: 172
        on right: 69
    $@54 (158)
        on left: 168
        on right: 172
    $@55 (159)
        on left: 169
        on right: 172
    $@56 (160)
        on left: 170
        on right: 172
    $@57 (161)
        on left: 171
        on right: 172
    case_clause (162)
        on left: 174
        on right: 177 178
    $@58 (163)
        on left: 173
        on right: 174
    default_case (164)
        on left: 176
        on right: 185
    $@59 (165)
        on left: 175
        on right: 176
    case_body (166)
        on left: 177 178
        on right: 178 182
    switch_clause_intro (167)
        on left: 182
        on right: 183 185
    $@60 (168)
        on left: 179
        on right: 182
    $@61 (169)
        on left: 180
        on right: 182
    $@62 (170)
        on left: 181
        on right: 182
    switch_clause (171)
        on left: 183 185
        on right: 70
    $@63 (172)
        on left: 184
        on right: 185
    type_cast (173)
        on left: 187
        on right: 44 190
    $@64 (174)
        on left: 186
        on right: 187
    assignment_target (175)
        on left: 188 189 190 191 192
        on right: 194
    assignment (176)
        on left: 194
        on right: 71 146 150
    $@65 (177)
        on left: 193
        on right: 194


State 0

    0 $accept: . module $end

    IMPORT  shift, and go to state 1
    CLASS   shift, and go to state 2

    module             go to state 3
    module_item        go to state 4
    module_list        go to state 5
    import_definition  go to state 6
    class_definition   go to state 7


State 1

   26 import_definition: IMPORT . SYMBOL $@4 ';'

    SYMBOL  shift, and go to state 8


State 2

   37 class_definition: CLASS . $@5 SYMBOL $@6 '(' ')' '{' $@7 class_body $@8 '}'

    $default  reduce using rule 33 ($@5)

    $@5  go to state 9


State 3

    0 $accept: module . $end
    5 module_list: module . module_item

    $end    shift, and go to state 10
    IMPORT  shift, and go to state 1
    CLASS   shift, and go to state 2

    module_item        go to state 11
    import_definition  go to state 6
    class_definition   go to state 7


State 4

    4 module_list: module_item .

    $default  reduce using rule 4 (module_list)


State 5

    1 module: module_list .

    $default  reduce using rule 1 (module)


State 6

    2 module_item: import_definition .

    $default  reduce using rule 2 (module_item)


State 7

    3 module_item: class_definition .

    $default  reduce using rule 3 (module_item)


State 8

   26 import_definition: IMPORT SYMBOL . $@4 ';'

    $default  reduce using rule 25 ($@4)

    $@4  go to state 12


State 9

   37 class_definition: CLASS $@5 . SYMBOL $@6 '(' ')' '{' $@7 class_body $@8 '}'

    SYMBOL  shift, and go to state 13


State 10

    0 $accept: module $end .

    $default  accept


State 11

    5 module_list: module module_item .

    $default  reduce using rule 5 (module_list)


State 12

   26 import_definition: IMPORT SYMBOL $@4 . ';'

    ';'  shift, and go to state 14


State 13

   37 class_definition: CLASS $@5 SYMBOL . $@6 '(' ')' '{' $@7 class_body $@8 '}'

    $default  reduce using rule 34 ($@6)

    $@6  go to state 15


State 14

   26 import_definition: IMPORT SYMBOL $@4 ';' .

    $default  reduce using rule 26 (import_definition)


State 15

   37 class_definition: CLASS $@5 SYMBOL $@6 . '(' ')' '{' $@7 class_body $@8 '}'

    '('  shift, and go to state 16


State 16

   37 class_definition: CLASS $@5 SYMBOL $@6 '(' . ')' '{' $@7 class_body $@8 '}'

    ')'  shift, and go to state 17


State 17

   37 class_definition: CLASS $@5 SYMBOL $@6 '(' ')' . '{' $@7 class_body $@8 '}'

    '{'  shift, and go to state 18


State 18

   37 class_definition: CLASS $@5 SYMBOL $@6 '(' ')' '{' . $@7 class_body $@8 '}'

    $default  reduce using rule 35 ($@7)

    $@7  go to state 19


State 19

   37 class_definition: CLASS $@5 SYMBOL $@6 '(' ')' '{' $@7 . class_body $@8 '}'

    METHOD   shift, and go to state 20
    CREATE   shift, and go to state 21
    DESTROY  shift, and go to state 22
    DICT     shift, and go to state 23
    LIST     shift, and go to state 24
    BOOL     shift, and go to state 25
    STRING   shift, and go to state 26
    NUM      shift, and go to state 27
    SYMBOL   shift, and go to state 28

    complex_name            go to state 29
    intrinsic_type          go to state 30
    class_body_item         go to state 31
    class_body              go to state 32
    class_data_definition   go to state 33
    method_definition       go to state 34
    constructor_definition  go to state 35
    destructor_definition   go to state 36


State 20

   63 method_definition: METHOD . $@14 SYMBOL $@15 '(' $@16 method_param_def $@17 ')' '(' $@18 method_param_def $@19 ')' $@20 method_body

    $default  reduce using rule 56 ($@14)

    $@14  go to state 37


State 21

   82 constructor_definition: CREATE . $@23 '(' $@24 method_param_def $@25 ')' $@26 method_body

    $default  reduce using rule 78 ($@23)

    $@23  go to state 38


State 22

   84 destructor_definition: DESTROY . $@27 method_body

    $default  reduce using rule 83 ($@27)

    $@27  go to state 39


State 23

    8 intrinsic_type: DICT .

    $default  reduce using rule 8 (intrinsic_type)


State 24

    9 intrinsic_type: LIST .

    $default  reduce using rule 9 (intrinsic_type)


State 25

   10 intrinsic_type: BOOL .

    $default  reduce using rule 10 (intrinsic_type)


State 26

   11 intrinsic_type: STRING .

    $default  reduce using rule 11 (intrinsic_type)


State 27

   12 intrinsic_type: NUM .

    $default  reduce using rule 12 (intrinsic_type)


State 28

    6 complex_name: SYMBOL .

    $default  reduce using rule 6 (complex_name)


State 29

    7 complex_name: complex_name . '.' SYMBOL
   13 intrinsic_type: complex_name .  [SYMBOL]

    '.'  shift, and go to state 40

    $default  reduce using rule 13 (intrinsic_type)


State 30

   40 class_data_definition: intrinsic_type . $@9 SYMBOL $@10 ';'

    $default  reduce using rule 38 ($@9)

    $@9  go to state 41


State 31

   31 class_body: class_body_item .

    $default  reduce using rule 31 (class_body)


State 32

   32 class_body: class_body . class_body_item
   37 class_definition: CLASS $@5 SYMBOL $@6 '(' ')' '{' $@7 class_body . $@8 '}'

    METHOD   shift, and go to state 20
    CREATE   shift, and go to state 21
    DESTROY  shift, and go to state 22
    DICT     shift, and go to state 23
    LIST     shift, and go to state 24
    BOOL     shift, and go to state 25
    STRING   shift, and go to state 26
    NUM      shift, and go to state 27
    SYMBOL   shift, and go to state 28

    $default  reduce using rule 36 ($@8)

    complex_name            go to state 29
    intrinsic_type          go to state 30
    class_body_item         go to state 42
    $@8                     go to state 43
    class_data_definition   go to state 33
    method_definition       go to state 34
    constructor_definition  go to state 35
    destructor_definition   go to state 36


State 33

   27 class_body_item: class_data_definition .

    $default  reduce using rule 27 (class_body_item)


State 34

   28 class_body_item: method_definition .

    $default  reduce using rule 28 (class_body_item)


State 35

   29 class_body_item: constructor_definition .

    $default  reduce using rule 29 (class_body_item)


State 36

   30 class_body_item: destructor_definition .

    $default  reduce using rule 30 (class_body_item)


State 37

   63 method_definition: METHOD $@14 . SYMBOL $@15 '(' $@16 method_param_def $@17 ')' '(' $@18 method_param_def $@19 ')' $@20 method_body

    SYMBOL  shift, and go to state 44


State 38

   82 constructor_definition: CREATE $@23 . '(' $@24 method_param_def $@25 ')' $@26 method_body

    '('  shift, and go to state 45


State 39

   84 destructor_definition: DESTROY $@27 . method_body

    '{'  shift, and go to state 46

    method_body  go to state 47


State 40

    7 complex_name: complex_name '.' . SYMBOL

    SYMBOL  shift, and go to state 48


State 41

   40 class_data_definition: intrinsic_type $@9 . SYMBOL $@10 ';'

    SYMBOL  shift, and go to state 49


State 42

   32 class_body: class_body class_body_item .

    $default  reduce using rule 32 (class_body)


State 43

   37 class_definition: CLASS $@5 SYMBOL $@6 '(' ')' '{' $@7 class_body $@8 . '}'

    '}'  shift, and go to state 50


State 44

   63 method_definition: METHOD $@14 SYMBOL . $@15 '(' $@16 method_param_def $@17 ')' '(' $@18 method_param_def $@19 ')' $@20 method_body

    $default  reduce using rule 57 ($@15)

    $@15  go to state 51


State 45

   82 constructor_definition: CREATE $@23 '(' . $@24 method_param_def $@25 ')' $@26 method_body

    $default  reduce using rule 79 ($@24)

    $@24  go to state 52


State 46

   76 method_body: '{' . $@21 method_body_element_list $@22 '}'
   77            | '{' . '}'

    '}'  shift, and go to state 53

    $default  reduce using rule 74 ($@21)

    $@21  go to state 54


State 47

   84 destructor_definition: DESTROY $@27 method_body .

    $default  reduce using rule 84 (destructor_definition)


State 48

    7 complex_name: complex_name '.' SYMBOL .

    $default  reduce using rule 7 (complex_name)


State 49

   40 class_data_definition: intrinsic_type $@9 SYMBOL . $@10 ';'

    $default  reduce using rule 39 ($@10)

    $@10  go to state 55


State 50

   37 class_definition: CLASS $@5 SYMBOL $@6 '(' ')' '{' $@7 class_body $@8 '}' .

    $default  reduce using rule 37 (class_definition)


State 51

   63 method_definition: METHOD $@14 SYMBOL $@15 . '(' $@16 method_param_def $@17 ')' '(' $@18 method_param_def $@19 ')' $@20 method_body

    '('  shift, and go to state 56


State 52

   82 constructor_definition: CREATE $@23 '(' $@24 . method_param_def $@25 ')' $@26 method_body

    DICT    shift, and go to state 23
    LIST    shift, and go to state 24
    BOOL    shift, and go to state 25
    STRING  shift, and go to state 26
    NUM     shift, and go to state 27
    SYMBOL  shift, and go to state 28

    $default  reduce using rule 55 (method_param_def)

    complex_name           go to state 29
    intrinsic_type         go to state 57
    method_def_param       go to state 58
    method_def_param_list  go to state 59
    method_param_def       go to state 60


State 53

   77 method_body: '{' '}' .

    $default  reduce using rule 77 (method_body)


State 54

   76 method_body: '{' $@21 . method_body_element_list $@22 '}'

    DESTROY  shift, and go to state 61
    DICT     shift, and go to state 23
    LIST     shift, and go to state 24
    BOOL     shift, and go to state 25
    STRING   shift, and go to state 26
    NUM      shift, and go to state 27
    FOR      shift, and go to state 62
    IF       shift, and go to state 63
    WHILE    shift, and go to state 64
    DO       shift, and go to state 65
    SWITCH   shift, and go to state 66
    SYMBOL   shift, and go to state 28

    complex_name              go to state 67
    intrinsic_type            go to state 68
    function_data_definition  go to state 69
    method_body_element       go to state 70
    method_body_element_list  go to state 71
    function_call             go to state 72
    for_clause                go to state 73
    if_clause                 go to state 74
    while_clause              go to state 75
    do_clause                 go to state 76
    switch_clause_intro       go to state 77
    switch_clause             go to state 78
    assignment                go to state 79


State 55

   40 class_data_definition: intrinsic_type $@9 SYMBOL $@10 . ';'

    ';'  shift, and go to state 80


State 56

   63 method_definition: METHOD $@14 SYMBOL $@15 '(' . $@16 method_param_def $@17 ')' '(' $@18 method_param_def $@19 ')' $@20 method_body

    $default  reduce using rule 58 ($@16)

    $@16  go to state 81


State 57

   51 method_def_param: intrinsic_type . $@13 SYMBOL

    $default  reduce using rule 50 ($@13)

    $@13  go to state 82


State 58

   52 method_def_param_list: method_def_param .

    $default  reduce using rule 52 (method_def_param_list)


State 59

   53 method_def_param_list: method_def_param_list . ',' method_def_param
   54 method_param_def: method_def_param_list .  [')']

    ','  shift, and go to state 83
